# stegosaurus

./: .pre-commit-config.yaml  pyproject.toml  scratch.ipynb
stegosaurus/: acrostic.py
stegosaurus/acrostic/: chains.py  params.py  prompts.py  transforms.py
stenops/: __init__.py  app.py  modal_image.py
stenops/acrostic/: chains.py  params.py  transforms.py
